--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ var LZString={_keyStr:"ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz01234
 
 你的选择是：
 [[ 保守稳妥——小范围试点，不触动高层，不强推差额选举。“党内民主要逐步来，不能急于求成，保持党管干部原则。”-&gt;民主保守]]
-[[大力推动——全国率先扩大直选、公推公选，甚至尝试省部级竞争。“这是党内民主突破口，必须大胆试验，为全国树典型。”-&gt;民主大力]]</tw-passagedata><tw-passagedata pid="17" name="StoryCaption" tags="" position="550,50" size="100,100"></tw-passagedata><tw-passagedata pid="18" name="StoryInit" tags="" position="1050,400" size="100,100">&lt;&lt;set $top_score to 0&gt;&gt;
+[[大力推动——全国率先扩大直选、公推公选，甚至尝试省部级竞争。“这是党内民主突破口，必须大胆试验，为全国树典型。”-&gt;民主大力]]</tw-passagedata><tw-passagedata pid="17" name="9" tags="" position="825,175" size="100,100"></tw-passagedata><tw-passagedata pid="18" name="StoryInit" tags="" position="1050,400" size="100,100">&lt;&lt;set $top_score to 0&gt;&gt;
 &lt;&lt;set $wang_yang_score to 0&gt;&gt;
 &lt;&lt;set $core_stability to 0&gt;&gt;
 </tw-passagedata><tw-passagedata pid="19" name="民主保守" tags="" position="425,1475" size="100,100">&lt;&lt;set $top_score += 1&gt;&gt;\
