--- a/index.html
+++ b/index.html
@@ -164,15 +164,15 @@ var LZString={_keyStr:"ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz01234
 
 你的选择是：
 [[ 保守稳妥——小范围试点，不触动高层，不强推差额选举。“党内民主要逐步来，不能急于求成，保持党管干部原则。”-&gt;民主保守]]
-[[大力推动——全国率先扩大直选、公推公选，甚至尝试省部级竞争。“这是党内民主突破口，必须大胆试验，为全国树典型。”-&gt;民主大力]]</tw-passagedata><tw-passagedata pid="17" name="9" tags="" position="825,175" size="100,100"></tw-passagedata><tw-passagedata pid="18" name="StoryInit" tags="" position="1050,400" size="100,100">&lt;&lt;set $top_score to 0&gt;&gt;
+[[大力推动——全国率先扩大直选、公推公选，甚至尝试省部级竞争。“这是党内民主突破口，必须大胆试验，为全国树典型。”-&gt;民主大力]]</tw-passagedata><tw-passagedata pid="17" name="StoryInit" tags="" position="1050,400" size="100,100">&lt;&lt;set $top_score to 0&gt;&gt;
 &lt;&lt;set $wang_yang_score to 0&gt;&gt;
 &lt;&lt;set $core_stability to 0&gt;&gt;
-</tw-passagedata><tw-passagedata pid="19" name="民主保守" tags="" position="425,1475" size="100,100">&lt;&lt;set $top_score += 1&gt;&gt;\
+</tw-passagedata><tw-passagedata pid="18" name="民主保守" tags="" position="425,1475" size="100,100">&lt;&lt;set $top_score += 1&gt;&gt;\
 你选择稳妥，试点控制在基层，不触碰高层红线。以江泽民、曾庆红为首的保守派松了口气，元老们一致认可你“可靠又有执行力”。
 
-[[【进入支线：思君不见下渝州】-&gt;2006重庆]]</tw-passagedata><tw-passagedata pid="20" name="民主大力" tags="" position="650,1500" size="100,100">你希望改变中国官场的政治生态，必须要有人走在前面，你大胆推进，宿豫、泗洪等地直选轰动全国，改革派欢呼，但元老们私下不满，你有预感，未来你的仕途会更加举步维艰。
+[[【进入支线：思君不见下渝州】-&gt;2006重庆]]</tw-passagedata><tw-passagedata pid="19" name="民主大力" tags="" position="650,1500" size="100,100">你希望改变中国官场的政治生态，必须要有人走在前面，你大胆推进，宿豫、泗洪等地直选轰动全国，改革派欢呼，但元老们私下不满，你有预感，未来你的仕途会更加举步维艰。
 
-[[【进入支线：思君不见下渝州】-&gt;2006重庆]]</tw-passagedata><tw-passagedata pid="21" name="2006重庆" tags="" position="525,1625" size="100,100">【进入支线：思君不见下渝州】
+[[【进入支线：思君不见下渝州】-&gt;2006重庆]]</tw-passagedata><tw-passagedata pid="20" name="2006重庆" tags="" position="525,1625" size="100,100">【进入支线：思君不见下渝州】
 
 2006年，重庆访问
 你担任江苏省委书记已近五年，苏南经济腾飞，全国瞩目，这年，中央鼓励区域合作，你率江苏经贸代表团访问重庆，考察城乡统筹试验区，推动苏渝经贸协作。
@@ -181,7 +181,7 @@ var LZString={_keyStr:"ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz01234
 你的选择是？
 [[热情回应。赞赏重庆模式，并表示未来合作支持。-&gt;重庆热情]]
 [[公事公办。专注经贸问题，不谈私人。-&gt;重庆公事]]
-[[“我对你产生了特殊的感情。”-&gt;重庆感情]]</tw-passagedata><tw-passagedata pid="22" name="重庆热情" tags="" position="375,1700" size="100,100">&lt;&lt;set $wang_yang_score += 1&gt;&gt;\
+[[“我对你产生了特殊的感情。”-&gt;重庆感情]]</tw-passagedata><tw-passagedata pid="21" name="重庆热情" tags="" position="375,1700" size="100,100">&lt;&lt;set $wang_yang_score += 1&gt;&gt;\
 晚宴上，你举杯赞赏汪洋的改革魄力，汪洋笑着回应你。
 这次访问后，你们私下沟通增多，关系明显升温
 
@@ -189,13 +189,13 @@ var LZString={_keyStr:"ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz01234
   [[【进入主线：十七大】-&gt;十七大_登顶线]]
 &lt;&lt;else&gt;&gt;
   [[【进入主线：十七大】-&gt;十七大_正史线]]
-&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="23" name="重庆公事" tags="" position="575,1775" size="100,100">晚宴上，你专注谈项目合作，访问圆满结束，汪洋送行时客气有礼，但你们没有再深入交谈。
+&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="22" name="重庆公事" tags="" position="575,1775" size="100,100">晚宴上，你专注谈项目合作，访问圆满结束，汪洋送行时客气有礼，但你们没有再深入交谈。
 
 &lt;&lt;if $top_score &gt;= 2&gt;&gt;
   [[【进入主线：十七大】-&gt;十七大_登顶线]]
 &lt;&lt;else&gt;&gt;
   [[【进入主线：十七大】-&gt;十七大_正史线]]
-&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="24" name="重庆感情" tags="" position="775,1800" size="100,100">&lt;&lt;set $wang_yang_score += 1&gt;&gt;\
+&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="23" name="重庆感情" tags="" position="775,1800" size="100,100">&lt;&lt;set $wang_yang_score += 1&gt;&gt;\
 你的话音落下，汪洋感到有些诧异，举杯的手也停在半空中，不过庆幸的是，这位游戏人间的渝地总督似乎已经司空见惯了，山城的夜风吹过，还带着些长江的湿润水汽，他看着你，眼神中夹带着隐晦的笑意。
 或许你想要更过火的激情，你没有再说话，只是一步步走向他，像两只互相依偎在一起的小兽，在权力与孤独中寻求短暂的慰藉。春风一度，你们的呼吸缠绵在一起，仿佛命运也缠绕在一起，这一夜你们不谈政治，只是用身体确认彼此的存在。
 
@@ -203,7 +203,7 @@ var LZString={_keyStr:"ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz01234
   [[【进入主线：十七大】-&gt;十七大_登顶线]]
 &lt;&lt;else&gt;&gt;
   [[【进入主线：十七大】-&gt;十七大_正史线]]
-&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="25" name="十七大_登顶线" tags="" position="250,1950" size="100,100">2007年秋，北京，十七大召开
+&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="24" name="十七大_登顶线" tags="" position="250,1950" size="100,100">2007年秋，北京，十七大召开
 双旗过关的你已在江苏证明了自己，铁本案件的铁腕让中央看到了你的执行力，党内民主的稳妥试点又打消了元老们的顾虑，拥有红色血脉，曾经在上海工作，共青团体系出身，党内一致认为你是接班的合适人选。十七大前夕，北京的空气弥漫着人事博弈紧张的气息，你隐约察觉，风向在向你倾斜。
 大会开幕那天，人民大会堂灯火辉煌，代表们鱼贯而入，你坐在主席台附近，目光平静。名单公布时刻到来——你的名字出现在政治局常委序列中，同时宣布出任国家副主席时，全场响起长时间的掌声。
 媒体迅速报道：新任常委李源潮，团派代表，未来可期。你站在长安街边，看着报纸头条，心中却没有太大欢喜——权力越高，责任越重，你清楚，这条路的每一步都踩在了平衡和取舍上。
@@ -218,22 +218,22 @@ var LZString={_keyStr:"ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz01234
 &lt;&lt;if $wang_yang_score &gt;= 1&gt;&gt;\
 [[选择汪洋-&gt;总理汪洋]]
 &lt;&lt;/if&gt;&gt;\
-[[选择李克强-&gt;总理李克强]]</tw-passagedata><tw-passagedata pid="26" name="十七大_正史线" tags="" position="575,1950" size="100,100">2007年秋，北京
+[[选择李克强-&gt;总理李克强]]</tw-passagedata><tw-passagedata pid="25" name="十七大_正史线" tags="" position="575,1950" size="100,100">2007年秋，北京
 十七大前夕，北京的空气弥漫着人事博弈紧张的气息，你接到通知，你即将从江苏调任中央组织部部长，十七大召开，你的名字出现在中央政治局委员的名单上，你兼任中央书记处书记，对于这个结果，你是不满意的，但或许你早已有预料，你只是叹了口气，无可奈何。
 从此你位至中枢，执掌媒体称之为中共第一天宫的组织部，看似风光，但你知道，你要面对的是更猛烈的腥风血雨。
 
-[[【进入主线：岭南春早】-&gt;2007岭南春早]]</tw-passagedata><tw-passagedata pid="27" name="总理汪洋" tags="" position="237.5,2075" size="100,100">你最终圈定了汪洋的名字，党内的元老对破格提拔并不看好，反对声连连，但你知道，制度体系需要改革，汪洋是你的不二人选。你依然记得多年前川渝调研时，与他在嘉陵江彻夜长谈的那个晚上。这些年来，他主政广东，腾笼换鸟的破局锐气让你印象深刻。
+[[【进入主线：岭南春早】-&gt;2007岭南春早]]</tw-passagedata><tw-passagedata pid="26" name="总理汪洋" tags="" position="237.5,2075" size="100,100">你最终圈定了汪洋的名字，党内的元老对破格提拔并不看好，反对声连连，但你知道，制度体系需要改革，汪洋是你的不二人选。你依然记得多年前川渝调研时，与他在嘉陵江彻夜长谈的那个晚上。这些年来，他主政广东，腾笼换鸟的破局锐气让你印象深刻。
 你对他心生好感，在这个利益盘根错节的时代，你深知自己需要一把锋利的刀，让他来担任你的总理，作为你推行新政的左膀右臂，再合适不过了。
 
-[[走向最终结局-&gt;南风激浪，四海潮生]]</tw-passagedata><tw-passagedata pid="28" name="总理李克强" tags="" position="400,2075" size="100,100">你最终在提名表上写下了李克强的名字。恍惚间，你似乎回到八十年代的团中央大院，回到了与他一同在北大的红楼读书的日子。你们拥有着相似的学术底色，更有着无需言明的治理默契。
+[[走向最终结局-&gt;南风激浪，四海潮生]]</tw-passagedata><tw-passagedata pid="27" name="总理李克强" tags="" position="400,2075" size="100,100">你最终在提名表上写下了李克强的名字。恍惚间，你似乎回到八十年代的团中央大院，回到了与他一同在北大的红楼读书的日子。你们拥有着相似的学术底色，更有着无需言明的治理默契。
 在这个步入深水区的改革局面之中，他为你统筹大局，精算大账，专业治国的时代开始了，瀛台与紫光阁的灯火日月同辉。
 
-[[走向最终结局-&gt;椿华秋实，同袍共治]]</tw-passagedata><tw-passagedata pid="29" name="2007岭南春早" tags="" position="650,2125" size="100,100">2007年，北京
+[[走向最终结局-&gt;椿华秋实，同袍共治]]</tw-passagedata><tw-passagedata pid="28" name="2007岭南春早" tags="" position="650,2125" size="100,100">2007年，北京
 十七大后，你执掌人事大权，中央决定派任汪洋南下主政广东。作为组织部长，是否亲自陪同并宣读这封任命装，是外界观察你们二人关系的信号灯。
 
 你决定：
 [[亲自前往宣读。-&gt;亲自宣读]]
-[[委派副部长前往宣读。-&gt;委派副部宣读]]</tw-passagedata><tw-passagedata pid="30" name="南风激浪，四海潮生" tags="" position="175,2225" size="100,100">&lt;&lt;remember $hasFinished to true&gt;&gt;\
+[[委派副部长前往宣读。-&gt;委派副部宣读]]</tw-passagedata><tw-passagedata pid="29" name="南风激浪，四海潮生" tags="" position="175,2225" size="100,100">&lt;&lt;remember $hasFinished to true&gt;&gt;\
 你赢得了最高位置。
 汪洋作为你的总理，与你联手开启了你们的时代，他与你同心同德，大刀阔斧的进行改革，外媒这样评价：头狼带领前行时，背后的抹赤红色总是悄然降临。
 但荣耀的背后总是孤独的，你在这攀登权力高山的路上，付出了你的梦想，你的青春，而这些代价，从来无人看见。庆幸，晚年回顾，与汪洋一同共事，是你巅峰时期难得的温暖。
@@ -242,37 +242,37 @@ var LZString={_keyStr:"ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz01234
 &lt;hr&gt;
 &lt;div style=&quot;text-align: center;&quot;&gt;
   [[—— 开启二周目（已解锁隐藏剧情） ——-&gt;Start]]
-&lt;/div&gt;</tw-passagedata><tw-passagedata pid="31" name="椿华秋实，同袍共治" tags="" position="375,2225" size="100,100">&lt;&lt;remember $hasFinished to true&gt;&gt;\
+&lt;/div&gt;</tw-passagedata><tw-passagedata pid="30" name="椿华秋实，同袍共治" tags="" position="375,2225" size="100,100">&lt;&lt;remember $hasFinished to true&gt;&gt;\
 你赢了最高位置，但荣耀的背后总是孤独的，你在这攀登权力高山的路上，付出了你的梦想，你的青春，而这些代价，从来无人看见。但或许，你回看这一路的风景，你能发自内心的感叹，是值得的。
 
 【登顶线（选择李克强当总理）：椿华秋实，同袍共治】
 &lt;hr&gt;
 &lt;div style=&quot;text-align: center;&quot;&gt;
   [[—— 开启二周目（已解锁隐藏剧情） ——-&gt;Start]]
-&lt;/div&gt;</tw-passagedata><tw-passagedata pid="32" name="亲自宣读" tags="" position="600,2250" size="100,100">&lt;&lt;set $wang_yang_score += 1&gt;&gt;\
+&lt;/div&gt;</tw-passagedata><tw-passagedata pid="31" name="亲自宣读" tags="" position="600,2250" size="100,100">&lt;&lt;set $wang_yang_score += 1&gt;&gt;\
 你决定亲自南下。在干部委任大会上，你站在台前，逐字逐句宣读那份沉甸甸的文件，宣读你为汪洋写下的评价。汪洋在台下与你对视，他眼里锐利的光芒不减当年，但你知道，他更加沉稳了，他会在岭南开辟他的天地。会后他向你走来，与你握手，你们在改革的共识上建立了一种默契的盟约。
 
-[[【继续主线：干部选拔改革】-&gt;干部选拔改革]]</tw-passagedata><tw-passagedata pid="33" name="委派副部宣读" tags="" position="712.5,2250" size="100,100">你低头看了看被塞满的日程表，最终在前往广东的公文上批示了“委派副部长代为宣读”。这完全符合流程，也符合你一贯低调严谨的办事风格。然而，在这样一个权力交接的关键时刻，你的缺席被外界解读为一种中立，或冷处理。汪洋在广州收到了任命，他依然会雷厉风行，只是你与他之间，只维持着公事公办的部委交情。
+[[【继续主线：干部选拔改革】-&gt;干部选拔改革]]</tw-passagedata><tw-passagedata pid="32" name="委派副部宣读" tags="" position="712.5,2250" size="100,100">你低头看了看被塞满的日程表，最终在前往广东的公文上批示了“委派副部长代为宣读”。这完全符合流程，也符合你一贯低调严谨的办事风格。然而，在这样一个权力交接的关键时刻，你的缺席被外界解读为一种中立，或冷处理。汪洋在广州收到了任命，他依然会雷厉风行，只是你与他之间，只维持着公事公办的部委交情。
 
-[[【继续主线：干部选拔改革】-&gt;干部选拔改革]]</tw-passagedata><tw-passagedata pid="34" name="干部选拔改革" tags="" position="600,2375" size="100,100">作为组织部部长，你准备在几个省份试点“公推平选”，即在提拔厅级干部时，不再由上级直接指定，而是由当地干部进行无记名投票推荐，且必须是差额选举。你的下属提交了两个方案，一份是温和的“小幅差额”另一份是极具突破性的“大比例差额” [cite: 185]
+[[【继续主线：干部选拔改革】-&gt;干部选拔改革]]</tw-passagedata><tw-passagedata pid="33" name="干部选拔改革" tags="" position="600,2375" size="100,100">作为组织部部长，你准备在几个省份试点“公推平选”，即在提拔厅级干部时，不再由上级直接指定，而是由当地干部进行无记名投票推荐，且必须是差额选举。你的下属提交了两个方案，一份是温和的“小幅差额”另一份是极具突破性的“大比例差额” [cite: 185]
 
 [[你选择“大比例差额”方案-&gt;大比例差额]]
-[[你选择“小幅差额”方案-&gt;小幅差额]]</tw-passagedata><tw-passagedata pid="35" name="大比例差额" tags="" position="525,2500" size="100,100">&lt;&lt;set $core_stability += 1&gt;&gt;\
+[[你选择“小幅差额”方案-&gt;小幅差额]]</tw-passagedata><tw-passagedata pid="34" name="大比例差额" tags="" position="525,2500" size="100,100">&lt;&lt;set $core_stability += 1&gt;&gt;\
 你顶着巨大的压力，签发了扩大差额比例的文件，你认为，如果不给投票者真正的选举权，那么所谓的民主只不过是蒙着眼睛选人。你知道，你会得罪不少地方上的老同志，但你告诉自己：如果连组织部都不敢动真格，改革将永远是个名词 [cite: 187]
 
-[[【继续主线：人事任用】-&gt;人事任用]]</tw-passagedata><tw-passagedata pid="36" name="小幅差额" tags="" position="662.5,2500" size="100,100">你反复斟酌，选择了更为稳健的比例。你在学潮时吃过的亏已经过教训，你明白，步子迈太大容易扯到根基，党管干部的原则必须在可控范围之内，只有先让制度活下来，才有谈论未来的资格。 [cite: 189]
+[[【继续主线：人事任用】-&gt;人事任用]]</tw-passagedata><tw-passagedata pid="35" name="小幅差额" tags="" position="662.5,2500" size="100,100">你反复斟酌，选择了更为稳健的比例。你在学潮时吃过的亏已经过教训，你明白，步子迈太大容易扯到根基，党管干部的原则必须在可控范围之内，只有先让制度活下来，才有谈论未来的资格。 [cite: 189]
 
-[[【继续主线：人事任用】-&gt;人事任用]]</tw-passagedata><tw-passagedata pid="37" name="人事任用" tags="" position="525,2625" size="100,100">2009年 北京 [cite: 191]
+[[【继续主线：人事任用】-&gt;人事任用]]</tw-passagedata><tw-passagedata pid="36" name="人事任用" tags="" position="525,2625" size="100,100">2009年 北京 [cite: 191]
 你收深圳市长许宗衡案发落马的通知，眼下，急需一位重量级官员空降救火并稳住大局。汪洋作为省委书记，希望能调任一位更符合他的想法的干部，他向你提名了他在安徽工作期间的旧部。而与此同时，曾庆红联系了你，暗示你可以将你在江苏系的部下王荣调往特区，你的决策至关重要，这不仅影响到派系平衡，还会影响你和汪洋的关系。 
 
 [[支持王荣空降深圳-&gt;支持王荣]]
-[[顶住压力，提议汪洋提名的人选-&gt;支持汪洋提名]]</tw-passagedata><tw-passagedata pid="38" name="支持王荣" tags="" position="300,2750" size="100,100">&lt;&lt;set $wang_yang_score -= 2&gt;&gt;\
+[[顶住压力，提议汪洋提名的人选-&gt;支持汪洋提名]]</tw-passagedata><tw-passagedata pid="37" name="支持王荣" tags="" position="300,2750" size="100,100">&lt;&lt;set $wang_yang_score -= 2&gt;&gt;\
 迫于多方的压力与钳制，你在拟人名单上圈中了王荣的名字。你清楚，王荣虽能胜任深圳市委书记一职，但某种程度上，会牵扯粤督的改革精力。你只能安慰自己，这是为了全局的平衡，你也是无奈之举，只是，当你在电话里听到汪洋的沉默，当你在学习会议中对上汪洋疏远的眼神，你意识到，他对你失望了，你们在山城建立的那份默契终究还是产生了裂痕。 [cite: 197]
 
-[[【进入主线：十八大】-&gt;十八大_正史终局]]</tw-passagedata><tw-passagedata pid="39" name="支持汪洋提名" tags="" position="675,2750" size="100,100">&lt;&lt;set $wang_yang_score += 1&gt;&gt;\
+[[【进入主线：十八大】-&gt;十八大_正史终局]]</tw-passagedata><tw-passagedata pid="38" name="支持汪洋提名" tags="" position="675,2750" size="100,100">&lt;&lt;set $wang_yang_score += 1&gt;&gt;\
 面对那份已经半公开化的意向名单，你罕见表达了不同意见。你认为，深圳作为改革试验田，人事安排首先要服从省委整体战略。你试图利用手中的权力，为汪洋安排一个更有利的部下，虽然最终结果不尽人意，但你让汪洋感受到了来自京城的温暖。 [cite: 199]
 
-[[【进入主线：十八大】-&gt;十八大_正史终局]]</tw-passagedata><tw-passagedata pid="40" name="十八大_正史终局" tags="" position="500,2950" size="100,100">2012年 北京 人民大会堂
+[[【进入主线：十八大】-&gt;十八大_正史终局]]</tw-passagedata><tw-passagedata pid="39" name="十八大_正史终局" tags="" position="500,2950" size="100,100">2012年 北京 人民大会堂
 这五年你战战兢兢如履薄冰，你终于等来了今天。计票结果在大屏幕上定格，你听到了自己的名字：国家副主席。
 
 你缓步走向台前，向台下鞠躬。从实权位置转任至此，虽然进入了国家领导人行列，但你敏锐地察觉到，掌声中夹杂着某种微妙的冷清。你眼角的余光掠过主席台的首排，那个位置上的人面色沉静如水，让你感到一种前所未有的压迫感。
@@ -284,7 +284,7 @@ var LZString={_keyStr:"ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz01234
 &lt;&lt;if $hasFinished&gt;&gt;
   [[或许有一个人能救你？（寻求帮助）-&gt;雌堕结局]]
   [[【二周目彩蛋】-&gt;梦结局]]
-&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="41" name="正史结局鉴定" tags="" position="375,3075" size="100,100">十八大闭幕，大幕落下。系统正在对你长达三十年的政治生涯进行最终鉴定……
+&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="40" name="正史结局鉴定" tags="" position="375,3075" size="100,100">十八大闭幕，大幕落下。系统正在对你长达三十年的政治生涯进行最终鉴定……
 
 &lt;hr&gt;
 &lt;div style=&quot;text-align: left; padding: 10px;&quot;&gt;
@@ -301,9 +301,9 @@ var LZString={_keyStr:"ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz01234
   [[点击查看最终命运-&gt;秋水长天，旧路荒芜]]
 &lt;&lt;else&gt;&gt;\
   [[点击查看最终命运-&gt;冷月无声，孤塔寒灯]]
-&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="42" name="雌堕结局" tags="" position="500,3075" size="100,100">你去求助了曾庆红，曾庆红狡黠地打量着你，他的眼神让你感到局促，不安。意思已经很明了了：如果要我保下你，你必须要拿出点什么作为交换。
+&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="41" name="雌堕结局" tags="" position="500,3075" size="100,100">你去求助了曾庆红，曾庆红狡黠地打量着你，他的眼神让你感到局促，不安。意思已经很明了了：如果要我保下你，你必须要拿出点什么作为交换。
 于是你出卖你的肉体，你被他养在了宅府深处，有了他出面，对你的彻查也会全面停止，他保住了你的生命，无论是生理上的，还是政治上的。但，你将作为一只金丝雀，成为他的性玩具，夜夜在他身下承欢。
-</tw-passagedata><tw-passagedata pid="43" name="梦结局" tags="" position="625,3075" size="100,100">你的呼吸一阵急促，你睁眼，重新在现实中坐起，眼前没有大会堂的灯火璀璨，也没有中南海的碧波涛涛，更没有无休止的勾心斗角，明天，就是你入学复旦的日子，你即将开始新的人生，去好好准备吧。</tw-passagedata><tw-passagedata pid="44" name="落日余晖，故人长绝" tags="" position="250,3200" size="100,100">&lt;&lt;remember $hasFinished to true&gt;&gt;\
+</tw-passagedata><tw-passagedata pid="42" name="梦结局" tags="" position="625,3075" size="100,100">你的呼吸一阵急促，你睁眼，重新在现实中坐起，眼前没有大会堂的灯火璀璨，也没有中南海的碧波涛涛，更没有无休止的勾心斗角，明天，就是你入学复旦的日子，你即将开始新的人生，去好好准备吧。</tw-passagedata><tw-passagedata pid="43" name="落日余晖，故人长绝" tags="" position="250,3200" size="100,100">&lt;&lt;remember $hasFinished to true&gt;&gt;\
 你坐在了国家副主席的位置上。在这场波谲云诡的权力交接中，你那种带有书生气的理想主义终究还是引来了上峰审视与猜忌。你察觉到了空气的凝固，于是你选择在权力进一步收紧之前，主动交出权限，告老还乡。
 
 在准备离开中南海的那个午后，你遇到了汪洋。他邀请你一同围绕着湖边散步，你们没有谈论任何当下的政局，只是像多年前在川渝，在岭南那样，并肩走在夕阳里。你庆幸，你当年的每一个坚持，都为你换回了一个真正的知己。
@@ -312,7 +312,7 @@ var LZString={_keyStr:"ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz01234
 &lt;hr&gt;
 &lt;div style=&quot;text-align: center;&quot;&gt;
   [[—— 开启二周目（已解锁隐藏剧情） ——-&gt;Start]]
-&lt;/div&gt;</tw-passagedata><tw-passagedata pid="45" name="秋水长天，旧路荒芜" tags="" position="375,3200" size="100,100">&lt;&lt;remember $hasFinished to true&gt;&gt;\
+&lt;/div&gt;</tw-passagedata><tw-passagedata pid="44" name="秋水长天，旧路荒芜" tags="" position="375,3200" size="100,100">&lt;&lt;remember $hasFinished to true&gt;&gt;\
 你得以平稳地走完副主席的任期，最终安全着陆。但在权力的道路上走这么一遭，你的心已经荒芜。你如同行尸走肉一般出席了例行的招待会，隔着人群远远地望着汪洋，他的眼神里已经没有当年看向你时的轻柔笑意，只剩下一抹客气的疏离。
 
 你赢得了政治上的寿终正寝，却在岁月的长河中失去了那个曾经能和你同屏共振的灵魂。
@@ -321,7 +321,7 @@ var LZString={_keyStr:"ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz01234
 &lt;hr&gt;
 &lt;div style=&quot;text-align: center;&quot;&gt;
   [[—— 开启二周目（已解锁隐藏剧情） ——-&gt;Start]]
-&lt;/div&gt;</tw-passagedata><tw-passagedata pid="46" name="冷月无声，孤塔寒灯" tags="" position="500,3200" size="100,100">&lt;&lt;remember $hasFinished to true&gt;&gt;\
+&lt;/div&gt;</tw-passagedata><tw-passagedata pid="45" name="冷月无声，孤塔寒灯" tags="" position="500,3200" size="100,100">&lt;&lt;remember $hasFinished to true&gt;&gt;\
 随之而来的是无休止的谈话、审查和老部下落马的信息。你曾经引以为傲的干部改革，如今成为你身上最大的政治污点。那种被系统排斥，被旧友疏远的孤独感，如同毒药一般日夜侵蚀着你。
 
 你发现自己早已无路可退，你再也找不回你的青春。你选择用一种最决绝的方式向这个你曾试图改变却最终将你吞噬的系统告别：死亡。
